--- a/memoria/contido/conclusions.tex
+++ b/memoria/contido/conclusions.tex
@@ -1,5 +1,4 @@
-\chapter{Conclusiones y trabajo futuro}
-\label{chap:c}
+\chapter{Conclusiones y trabajo futuro}\label{chap:c}
 \lettrine{C}{omo} cierre del trabajo, cabe reflexionar sobre el desarrollo del mismo así como sobre su estado actual, y su futuro. Dado por finalizado el trabajo, se han alcanzado buena parte de los objetivos fijados en su concepción:
 
 \begin{itemize}
