--- a/memoria/contido/herramientas_y_software.tex
+++ b/memoria/contido/herramientas_y_software.tex
@@ -16,7 +16,7 @@ Para llevar a cabo el control de versiones se utilizó GitLab ya que el código 
     \subsection{Visual Studio Community}
 Es el Entorno de desarrollo de C++ por excelencia en Windows.
 \section{Herramientas}
-    \subsection{\acrfull{dicom}}
+    \subsection{DICOM}
     \acrshort{dicom} es la denominación de un estándar utilizado principalmente para la visualización, impresión, almacenamiento y transmisión de imágenes y datos de propósito médico.
     Los ficheros \acrshort{dicom} consisten en una cabecera con campos estandarizados y de forma libre, y un cuerpo con datos de imagen. Un objeto \acrshort{dicom} simple puede contener solamente una imagen, pero esta imagen puede tener múltiples fotogramas, permitiendo el almacenamiento de bloques de datos con varios fotogramas.
    
@@ -143,8 +143,7 @@ Para ello se somete cada sección de la imagen a una corrección de perspectiva.
 \begin{figure}
   \centering
   \includegraphics[width=0.7\textwidth]{imaxes/marker_bits_extraction.png}
-  \caption{Proceso de extracción de Bits}
-  \label{fig:mbe}
+  \caption{Proceso de extracción de Bits}\label{fig:mbe}
 \end{figure}
 
 \subsubsection*{Identificación de Marcadores}
