--- a/memoria/bibliografia/acronimos.tex
+++ b/memoria/bibliografia/acronimos.tex
@@ -21,3 +21,6 @@
 \newacronym{cad}{CAD}{Computer-Aided Design}
 \newacronym{opencv}{OpenCV}{Open Source Computer Vision Library}
 \newacronym{sdk}{SDK}{Software Development Kit}
+\newacronym{fbp}{FBP}{Retroproyección Filtrada}
+\newacronym{cgls}{CGLS}{Mínimos Cuadrados Conjugados}
+\newacronym{mlem}{MLEM}{Máxima Verosimilitud de la Expectativa-Maximización}
