--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -22,6 +22,7 @@
 @article{kontaxakis2002reconstruccion,
   title={Reconstrucci{\'o}n de imagen en tomograf{\'\i}a por emisi{\'o}n de positrones},
   author={Kontaxakis, G and Vaquero L{\'o}pez, Juan Jos{\'e} and Santos, Andr{\'e}s},
+  journal={Revista de la Real Academia de las Ciencias Exactas, F{\'\i}sicas y Naturales},
   year={2002},
   publisher={Real Academia de las Ciencias Exactas, F{\'\i}sicas y Naturales}
 }
@@ -263,6 +264,9 @@
 @article{zahera2012fabricacion,
   title={La fabricaci{\'o}n aditiva, tecnolog{\'\i}a avanzada para el dise{\~n}o y el desarrollo de productos},
   author={Zahera, Manuel},
+  journal={Econom{\'\i}a Industrial},
+  number={386},
+  pages={71--76},
   year={2012}
 }
 @article{Chen2021,
