--- a/memoria/portada/palabras_chave.tex
+++ b/memoria/portada/palabras_chave.tex
@@ -3,9 +3,9 @@
 \item [\palabraschaveprincipal:] \mbox{} \\[-20pt]
   \begin{itemize}
     \item Realidad aumentada
-    \item Impresion 3D
+    \item Impresión 3D
     \item Imagen médica
-  \end{itemize}
+  \end{itemize} 
 \end{description}
 \begin{description}
 \item [\palabraschavesecundaria:] \mbox{} \\[-20pt]
