--- a/memoria/contido/estado_del_arte.tex
+++ b/memoria/contido/estado_del_arte.tex
@@ -3,7 +3,6 @@
 Este capítulo se centra en detallar el estado actual de las tecnologías utilizadas en el proyecto así como en analizar soluciones similares al proyecto.
 \section{Visualización}
 Los componentes artificiales que deseamos incluir en las imágenes del mundo real proceden del framework desarrollado por \citeauthor{Kroes2012} que aplica técnicas de \acrfull{mcrt} sobre \acrfull{dvr}.
-
 El termino \acrshort{dvr} se utiliza para referirse a las técnicas que producen una imagen directamente a partir de datos de un volumen, sin realizar pasos intermedios. Para que esto sea posible es necesario implementar modelos físicos que indiquen cómo se genera, refleja, dispersa o oculta la luz \cite{Max1995}. Estos modelos con el paso del tiempo han evolucionado en modelos más y más complejos que han probado ser beneficiosos para la visualización científica de modelos 3D \cite{Daz2015}, \cite{Englund2016}, \cite{Lindemann2011} .
 
 La implementación de estos modelos conlleva altos tiempos de renderizado, o en su defecto, un equipo increíblemente costoso para poder obtener una experiencia interactiva \cite{IglesiasGuitian2022}. Para enfrentar esta casuística,  \citeauthor{IglesiasGuitian2022} implementan un algoritmo de reducción de ruido basado en \acrfull{rls} que permite una experiencia interactiva en tiempo real, sobre \acrshort{gpu}s comerciales. Este proyecto se fundamenta en \cite{IglesiasGuitian2022} para el renderizado de las imágenes que posteriormente se apliquen en realidad aumentada sobre las imágenes reales.
@@ -24,6 +23,4 @@ Para este proyecto se escogieron las tecnologías E y G que se observan en  la \
 Destacar también la solución presentada por \cite{MoretaMartinez2020}. Este proyecto presenta un método para diseñar aplicaciones de realidad aumentada para la visualización de modelos anatómicos en 3 dimensiones mediante el uso de un marcador fiduciario. En el se explica un método para extraer una figura a partir de una \acrshort{tc}. Posteriormente, provee instrucciones detalladas para la impresión 3D del marcador fiduciario. Finalmente utilizando la extensión de Vuforia para Unity crea una aplicación móvil que permite la visualización en realidad aumentada de la pieza. 
 
 \section{Impresión 3D}
-La impresión 3D o fabricación aditiva es un proceso para manufacturar objetos de cualquier forma o tamaño a partir de un modelo 3D o otro tipo de fuente electrónica a partir de procesos aditivos en los que sucesivas capas de material se depositan bajo control de un ordenador \cite{yan_dong_su_han_song_wei_shi_2018}.
-Desde 1984 \cite{ChanaRodrguez2016} hasta la actualidad, la impresión 3D ha afrontado una revolución que se fundamenta en pilares sólidos como el abaratamiento de los costes de producción de impresoras 3D, la mejora de su precisión y velocidad, el software libre, la comercialización de los productos a usuarios finales , documentación, formación extensa corroborada y creada por terceros que facilita y realimenta el desarrollo de nuevos proyectos.
-Producto de esto, ha sido la implementación de esta tecnología en el ámbito sanitario, tanto para la producción de herramientas especializadas \cite{ChanaRodrguez2016} como para el diseño y la implantación de prótesis personalizadas para cada paciente \cite{Gonzalez_Alvarez_2021}.
+En el estado actual de la tecnología de impresión 3D, se observan avances significativos en materiales biocompatibles y técnicas de impresión de alta resolución, que permiten la creación de modelos anatómicos precisos para aplicaciones médicas. Tecnologías emergentes como la impresión 3D de metales y resinas fotopolimerizables han revolucionado la producción de prótesis personalizadas y herramientas quirúrgicas, facilitando intervenciones más seguras y eficientes \cite{Gonzalez_Alvarez_2021}. Además, la integración con \acrfull{cad} y escaneo 3D ha permitido la fabricación de marcadores fiduciarios personalizados, esenciales para el registro en realidad aumentada, como se detalla en proyectos similares \cite{MoretaMartinez2020}. Estos desarrollos no solo han reducido costos y tiempos de producción, sino que también han expandido el acceso a tecnologías de vanguardia en entornos clínicos.
